--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,9 +1,23 @@
+@import "../../styles/variables";
+
 .searchWrap {
-    padding: 40px;
+    padding: 100px 0;
     background: url('../../assets/images/HP_Star27.webp') no-repeat center center / cover;
+
+    @media all and (max-width: $sm) {
+        padding: 50px 0;
+    }
 }
 
 .inputSearch {
     width: 100%;
     padding: 8px;
+
+    &:hover,
+    &:focus {
+        outline: none;
+    }
+}
+.prompt {
+    display: none;
 }
