--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -27,14 +27,19 @@
 }
 
 .imageWrap {
-    display: flex;
-    justify-content: center;
-    height: 200px;
     overflow: hidden;
+    display: flex;
+    margin: 0 0 16px;
+    height: 200px;
+    justify-content: center;
+
+    @media (max-width: $sm) {
+        height: 150px;
+    }
 
     img {
-        width: 100%;
         max-width: 100%;
+        width: 100%;
         height: max-content;
     }
 }
